--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>
 		cdpas.github.io
 	</title>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<h1>Welcome</h1>
+	<div class="columns content m-0 p-0 is-vcentered">
+		<div class="column has-text-centered">
+			<button class="hypno">
+				<div class="eye"></div>
+			</button><button class="hypno">
+				<div class="eye"></div>
+			</button>
+			<h1 class="title lobster mt-0">
+				cdpas
+			</h1>
+			<p class="has-text-white is-size-7">visit <a href="https://cdpas.net" class="has-text-white">cdpas.net</a></p>
+		</div>
+	</div>
+
 </body>
+
 </html>
