--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1 class="title lobster mt-0">
 				cdpas
 			</h1>
-			<p class="has-text-white is-size-7">visit <a href="https://cdpas.net" class="has-text-white">cdpas.net</a></p>
+			<p class="has-text-white is-size-7">visit <a href="https://cdpas.dev" class="has-text-white">cdpas.dev</a></p>
 		</div>
 	</div>
 
